# Compliance-Aware-RAG-Document-Assistant

./: .env.example  .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  readme.md
data/: eval_dataset.json
frontend/app/: globals.css  page.tsx
frontend/components/: ChatPanel.tsx  Composer.tsx  Header.tsx  MessageBubble.tsx  SourceCard.tsx  UploadPanel.tsx
frontend/lib/: api.ts  types.ts
scripts/: evaluate.py  ingest.py  test_bm25.py  test_dense.py  test_hybrid.py  verify_index.py
src/app/: config.py  debug_qdrant.py  main.py
src/app/api/: dependencies.py
src/app/api/routes/: chat.py  upload.py
src/app/compliance/: audit_logger.py
src/app/core/: container.py
src/app/middleware/: logging.py
src/app/models/: response.py  schemas.py
src/app/observability/: logger.py  tracer.py
src/app/pipelines/: indexing.py  querying.py
src/app/services/: bm25_retriever.py  dense_retriever.py  document_loader.py  embedder.py  hybrid_retriever.py  llm_service.py  pdf_ingestion.py  reranker.py  vector_store.py
src/app/utils/: chunker.py  evaluation.py
